[tool.poetry]
name = "bkr"
version = "0.1.0"
description = ""
authors = ["Conor McGrory <cpmcgrory@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
